# qcec

./: .license-tools-config.json  .pre-commit-config.yaml  .readthedocs.yaml  .rumdl.toml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  UPGRADING.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md  SUPPORT.md  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: cd.yml  ci.yml  templating.yml  update-mqt-core.yml  upstream.yml
bindings/: CMakeLists.txt  application_scheme.cpp  bindings.cpp  configuration.cpp  equivalence_checking_manager.cpp  equivalence_criterion.cpp  register_application_scheme.cpp  register_configuration.cpp  register_equivalence_checking_manager.cpp  register_equivalence_criterion.cpp  register_state_type.cpp  state_type.cpp
cmake/: AddMQTQCECBinding.cmake  ExternalDependencies.cmake
docs/: ai_usage.md  compilation_flow_verification.md  conf.py  contributing.md  development_guide.md  equivalence_checking.md  index.md  installation.md  parametrized_circuits.md  partial_equivalence.md  references.md  refs.bib  tooling.md
include/: Configuration.hpp  EquivalenceCheckingManager.hpp  EquivalenceCriterion.hpp  ProcessManager.hpp  ThreadSafeQueue.hpp
include/checker/: EquivalenceChecker.hpp
include/checker/dd/: DDAlternatingChecker.hpp  DDConstructionChecker.hpp  DDEquivalenceChecker.hpp  DDPackageConfigs.hpp  DDSimulationChecker.hpp  TaskManager.hpp
include/checker/zx/: ZXChecker.hpp
python/mqt/qcec/: __init__.py  application_scheme.pyi  compilation_flow_profiles.py  configuration.pyi  configuration_options.py  equivalence_checking_manager.pyi  equivalence_criterion.pyi  (+5 more)
src/: CMakeLists.txt  Configuration.cpp  EquivalenceCheckingManager.cpp  ProcessManager.cpp
src/checker/: EquivalenceChecker.cpp
test/: CMakeLists.txt  test_compilationflow.cpp  test_dynamic_circuits.cpp  test_equality.cpp  test_functionality.cpp  test_journal.cpp  test_partial_equivalence.cpp  test_simple_circuit_identities.cpp  test_simulation.cpp  test_symbolic.cpp  test_zx.cpp
test/python/: test.py  test_compilation_flow_profiles.py  test_configuration.py  test_construction.py  test_dynamic_circuits.py  test_partial_equivalence.py  test_symbolic.py  test_verify.py  test_verify_compilation.py
(+32 files in other folders)
